@@ -1,7 +1,7 @@
 2001-07-23  Bradford Hovinen  <hovinen@ximian.com>
 
-	* capplet-util.c (set_moniker_cb): Put up error dialog if we could
-	not resolve the configuration moniker
+	* capplet-util.c (set_moniker_cb): Set InvalidValue exception if
+	the program could not resolve the moniker
 
 2001-07-20  Chema Celorio  <chema@celorio.com>
 
