@@ -1,3 +1,9 @@
+2001-07-23  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-dir.c (capplet_control_launch): Put up an error dialog
+	and abort the process if the capplet reports an error trying to
+	resolve its moniker
+
 2001-07-20  Chema Celorio  <chema@celorio.com>
 
 	* RELEASE : 1.5.0
